RoomReservation/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roomreservation-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: roomreservation
    spec:
      containers:
        - name: roomreservation-container
          image: yichingllin/roomreservation-docker
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
  selector:
    matchLabels:
      app: roomreservation
